File Name: CHANGES

08/02/2012 FASP 1.0.4:
- Update block Jacobi in OMP.
- Fix function name bugs in io.c.

07/12/2012 FASP 1.0.3:
- Update a few OMP routines.
- Prepare testing OMP version on Windows.
- Modify the TODO list.

07/05/2012 FASP 1.0.2:
- Modify the interface of Schwarz to make it consistent with AMG and ILU.
- Update a few OMP routines. 
- Fix a VC++ compability problem in fort_ns.h.
- Fix a data type bug and other possible problems according to VC++ warnings.
- Remove user-defined make.inc files.

06/27/2012 FASP 1.0.1:
- Fix a few GCC warnings and Doxygen warnings.
- Update documentation.
- Update a few OMP routines.

06/26/2012 FASP 1.0.0:
- Bug fixes: the OMP warnings and implicit definied functions.
- Fix Doxygen in the new added functions for OMP.
- Update documentation.

06/23/2012 FASP 0.9.9:
- Fix warnings in the serial version except *.f files.
- Find bugs in the OMP version with implicit function definitions.

06/20/2012 FASP 0.9.8: alpha testing stage
- Fix a bug in OMP conditional preprocessing.
- Fix a bug in fasp_icsr_tran and fasp_dcsr_tran.
- Test the current version with gcc4.4, 4.5, and 4.6 in various of Linux systems.
- OMP version merging is completed.
- Modify default parameters based on performance tests.
- Fix a function name bug. 

06/19/2012 FASP 0.9.6:
- Bug fixes: core dump error in gcc-4.6.3.
- Fix the OMP merging problems.
- Move OMP switch from fasp.h to make.inc.

06/16/2012 FASP 0.9.5:
- Change OMP threshold.
- Bug fixes in FEM assembling.
- Add rsync support for SourceForge.net.
- Revise FASP starting web page. 
- Find a new bug in BiCGstab: need to be fixed.
- Find a new bug when using gcc-4.6.3 in OMP version.

06/15/2012 FASP 0.9.4:
- Merge the new OMP version.
- Change the name "core" to "base", including documentation.
- Fix a small bug in BSR format. 
- Fix a typo in doxygen.h.

06/14/2012 FASP 0.9.3:
- Fix a bunch of WARNINGS in gcc when -Wall open.
- Fix a few errors in VC++.