@@ -61,10 +61,12 @@ void fasp_precond_dbsr_diag (REAL *r,
 	        INT nthreads = 1, use_openmp = FALSE;
             unsigned INT i;
 
-	        if(FASP_USE_OPENMP && m > OPENMP_HOLDS){
+#if FASP_USE_OPENMP
+	        if ( m > OPENMP_HOLDS ) {
 		        use_openmp = TRUE;
                 nthreads = FASP_GET_NUM_THREADS();
 	        }
+#endif
 
             if (use_openmp) {
 #if FASP_USE_OPENMP
@@ -125,10 +127,12 @@ void fasp_precond_dbsr_diag_nc2(REAL *r,
 
 	INT nthreads = 1, use_openmp = FALSE;
 
-	if(FASP_USE_OPENMP && m > OPENMP_HOLDS){
+#if FASP_USE_OPENMP
+	if ( m > OPENMP_HOLDS ) {
 		use_openmp = TRUE;
         nthreads = FASP_GET_NUM_THREADS();
 	}
+#endif
     
     if (use_openmp) {
 #if FASP_USE_OPENMP
@@ -186,10 +190,12 @@ void fasp_precond_dbsr_diag_nc3(REAL *r,
 
 	INT nthreads = 1, use_openmp = FALSE;
 
-	if(FASP_USE_OPENMP && m > OPENMP_HOLDS){
+#if FASP_USE_OPENMP
+	if ( m > OPENMP_HOLDS ) {
 		use_openmp = TRUE;
         nthreads = FASP_GET_NUM_THREADS();
 	}
+#endif
     
     if (use_openmp) {
 #if FASP_USE_OPENMP
@@ -247,11 +253,13 @@ void fasp_precond_dbsr_diag_nc5(REAL *r,
 
 	INT nthreads = 1, use_openmp = FALSE;
 
-	if(FASP_USE_OPENMP && m > OPENMP_HOLDS){
+#if FASP_USE_OPENMP
+	if ( m > OPENMP_HOLDS ) {
 		use_openmp = TRUE;
         nthreads = FASP_GET_NUM_THREADS();
 	}
-    
+#endif
+
     if (use_openmp) {
 #if FASP_USE_OPENMP
         INT myid;
@@ -307,10 +315,12 @@ void fasp_precond_dbsr_diag_nc7 (REAL *r,
 
 	INT nthreads = 1, use_openmp = FALSE;
 
-	if(FASP_USE_OPENMP && m > OPENMP_HOLDS){
+#if FASP_USE_OPENMP
+	if ( m > OPENMP_HOLDS ) {
 		use_openmp = TRUE;
         nthreads = FASP_GET_NUM_THREADS();
 	}
+#endif
     
     if (use_openmp) {
 #if FASP_USE_OPENMP
